crates/vega-codegen/tests/compile_errors/zero_first_argument.rs
vega_codegen::algebra!(0);

fn main() {
    eprintln!("This is nothing");
}
